[package]
name = "egress"
version = "0.1.0"
edition = "2021"

[features]
default = []
s2n-quic = ["dep:s2n-quic"]
quinn = ["dep:quinn", "dep:rustls", "dep:rustls-pemfile", "dep:rcgen"]

[dependencies]
quinn = { version = "0.10", optional = true }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
futures-util = "0.3"
futures = "0.3"
rustls = { version = "0.21.0", features = [
  "dangerous_configuration",
  "quic",
], optional = true }
rustls-pemfile = { version = "1.0.2", optional = true }
rcgen = { version = "0.10", optional = true }
bytes = "1.2"
log = "0.4"
env_logger = "0.9"
toml = "0.5"
base64 = "0.21"
serde = "1"
serde_derive = "1"
flume = "0.10"
clap = { version = "4.1", features = ["derive"] }
thiserror = "1"
dashmap = "5.4"
crossbeam-queue = "0.3"
s2n-quic = { version = "1", features = [
  "unstable-provider-datagram",
], optional = true }
async-trait = "0.1"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
