[package]
name = "egress"
version = "0.1.0"
edition = "2021"

[dependencies]
quinn = "0.10"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
futures-util = "0.3"
futures = "0.3"
rustls = { version = "0.21.0", features = ["dangerous_configuration", "quic"] }
rustls-pemfile = "1.0.2"
rcgen = "0.10"
bytes = "1.2"
log = "0.4"
env_logger = "0.9"
toml = "0.5"
base64 = "0.21"
serde = { version = "1.0", features = ["derive"] }
flume = "0.10"
clap = { version = "4.1", features = ["derive"] }
thiserror = "1"
dashmap = "5.4"
crossbeam-queue = "0.3"
anyhow = "1.0.78"
async-trait = "0.1.76"
parking_lot = "0.12.1"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
